add submit handler to user details form so go button works

--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -3,6 +3,7 @@
                 <h1 class="title">User details</h1>
             </header>
                 <div class="content" role="main">
+                    <form action="" method="post" name="userForm" id="userForm" enctype="multipart/form-data">
                     <div id="side-form">
                         <fieldset>
                             <div id="problem_form">
@@ -21,11 +22,12 @@
                                     </div>
 
                                   <div>
-                                      <input type="button" class="button-blue" id="save" value="Save Details">
+                                      <input type="submit" class="button-blue" id="save" value="Save Details">
                                   </div>
                                 </div>
 
                             </div>
                         </fieldset>
                     </div>
+                    </form>
                 </div>
