use correct attribute

--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -10,7 +10,7 @@
                                 <div class="ext-form-content">
                                     <div>
                                         <label for="form-email">E-Mail Adresse</label>
-                                        <input type="email" email="form-email" id="form-email" value="<%= email %>">
+                                        <input type="email" name="form-email" id="form-email" value="<%= email %>">
                                     </div>
                                     <div>
                                         <label for="form-name">Name (optional)</label>
