use templates generated by translation process

--- a/www/templates/report.html
+++ b/www/templates/report.html
@@ -1,5 +1,5 @@
             <header class="bar-title">
-                <div class="button-prev">Prev</div>
+                <div class="button-prev">Back</div>
                 <h1 class="title"></h1>
             </header>
             <div class="content" role="main">
