--- a/www/templates/sent.html
+++ b/www/templates/sent.html
@@ -1,12 +1,12 @@
         <header class="bar-title">
-            <h1 class="title">Gesendet Meldung</h1>
+            <h1 class="title">Report Sent</h1>
         </header>
         <div class="content" role="main">
             <div class="ext-form-content">
                 <h3>Fast Fertig! Bitte checken Sie ihre Mailbox...</h3>
 
                 <p>
-                Falls Sie kein E-Mail erhalten, überprüfend Sie bitte Ihren Spam-Ordner.
+                Falls Sie kein E-Mail erhalten, &uuml;berpr&uuml;fend Sie bitte Ihren Spam-Ordner.
                 </p>
                 <div>
                   <a class="button-blue" href="index.html" id="button-done">Erledigt</a>
