add option to use existing photo

--- a/www/templates/photo.html
+++ b/www/templates/photo.html
@@ -8,8 +8,11 @@
                             <div id="problem_form">
                                 <div class="ext-form-content">
                                   <div>
-                                      <a class="button-blue" id="add-photo">Add Photo</a>
+                                      <a class="button-blue" id="take-photo">Take Photo</a>
                                       <a class="nodisplay button-grey" id="del-photo">Remove Photo</a>
+                                  </div>
+                                  <div>
+                                      <a class="button-blue" id="add-photo">Add Existing Photo</a>
                                   </div>
                                   <img class="ext-photo-preview" src="img/placeholder-photo.png" alt="" id="report-photo">
                                   <div>
