--- a/templates/photo.html
+++ b/templates/photo.html
@@ -8,8 +8,11 @@
                             <div id="problem_form">
                                 <div class="ext-form-content">
                                   <div>
-                                      <a class="button-blue" id="add-photo">[% loc('Add Photo') %]</a>
+                                      <a class="button-blue" id="take-photo">[% loc('Take Photo') %]</a>
                                       <a class="nodisplay button-grey" id="del-photo">[% loc('Remove Photo') %]</a>
+                                  </div>
+                                  <div>
+                                      <a class="button-blue" id="add-photo">[% loc('Add Existing Photo') %]</a>
                                   </div>
                                   <img class="ext-photo-preview" src="img/placeholder-photo.png" alt="" id="report-photo">
                                   <div>
