center photos on take add photo page

--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -42,6 +42,10 @@ textarea {
     display: none;
 }
 
+.center {
+    text-align: center;
+}
+
 input[type=submit].button-blue,
 .button-grey,
 .button-blue {
