--- a/www/templates/photo.html
+++ b/www/templates/photo.html
@@ -14,7 +14,9 @@
                                   <div>
                                       <a class="button-blue" id="add-photo">Add Existing Photo</a>
                                   </div>
+                                  <div class="center">
                                   <img class="ext-photo-preview" src="img/placeholder-photo.png" alt="" id="report-photo">
+                                  </div>
                                   <div>
                                       <a class="button-grey" id="skip-photo">Continue without photo</a>
                                       <a class="nodisplay button-blue" id="use-photo">Use photo</a>
