update name of app

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -3,7 +3,7 @@
             </header>
                 <div class="content" role="main" id="first-page">
                     <div id="welcome">
-                        <h1>FixMyZ&uuml;rich</h1>
+                        <h1>Z&uuml;ri wie neu</h1>
 
                         <p>
                             [% loc('Fill out your details to get started reporting problems') %]
