translated templates and javascript

--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -30,8 +30,8 @@
                             </div>
                             <a id="mark-here" class="nodisplay button-blue">Eine Meldung erfassen</a>
                             <!-- a id="saved-reports" class="nodisplay button-grey">View Drafts</a -->
-                            <a id="use-location" class="nodisplay button-blue">Use this Location</a>
-                            <a id="select-another" class="nodisplay button-grey">Select another</a>
+                            <a id="use-location" class="nodisplay button-blue">Hier erfassen</a>
+                            <a id="select-another" class="nodisplay button-grey">Anderer Ort</a>
                     </div>
                     </form>
                 </div>
