--- a/www/templates/help.html
+++ b/www/templates/help.html
@@ -1,6 +1,6 @@
         <header class="bar-title">
-            <a class="button-prev">Back</a>
-            <h1 class="title">Help</h1>
+            <a class="button-prev">Zurück</a>
+            <h1 class="title">Hilfe</h1>
         </header>
         <div class="content" role="main">
         </div>
