--- a/www/templates/photo.html
+++ b/www/templates/photo.html
@@ -1,6 +1,6 @@
             <header class="bar-title">
-                <div class="button-prev">Back</div>
-                <h1 class="title">Add a Photo</h1>
+                <div class="button-prev">Zurück</div>
+                <h1 class="title">Foto</h1>
             </header>
                 <div class="content" role="main">
                     <div id="side-form">
@@ -9,7 +9,7 @@
                                 <div class="ext-form-content">
                                   <div>
                                       <a class="button-blue" id="take-photo">Take Photo</a>
-                                      <a class="nodisplay button-grey" id="del-photo">Remove Photo</a>
+                                      <a class="nodisplay button-grey" id="del-photo">Foto löschen</a>
                                   </div>
                                   <div>
                                       <a class="button-blue" id="add-photo">Add Existing Photo</a>
@@ -18,8 +18,8 @@
                                   <img class="ext-photo-preview" src="img/placeholder-photo.png" alt="" id="report-photo">
                                   </div>
                                   <div>
-                                      <a class="button-grey" id="skip-photo">Continue without photo</a>
-                                      <a class="nodisplay button-blue" id="use-photo">Use photo</a>
+                                      <a class="button-grey" id="skip-photo">Weiter ohne Photo</a>
+                                      <a class="nodisplay button-blue" id="use-photo">Foto verwenden</a>
                                   </div>
                                 </div>
 
