--- a/www/templates/privacy.html
+++ b/www/templates/privacy.html
@@ -1,5 +1,5 @@
         <header class="bar-title">
-            <a class="button-prev">Back</a>
+            <a class="button-prev">Zurück</a>
             <h1 class="title">Privacy Policy</h1>
         </header>
         <div class="content" role="main">
