--- a/www/templates/report.html
+++ b/www/templates/report.html
@@ -1,5 +1,5 @@
             <header class="bar-title">
-                <div class="button-prev">Back</div>
+                <div class="button-prev">Zurück</div>
                 <h1 class="title"></h1>
             </header>
             <div class="content" role="main">
@@ -42,7 +42,7 @@
 
                         <% if ( photo ) { %>
                         <div class="update-img">
-                            <img alt="Photo of this report" src="<%= photo %>">
+                            <img alt="Foto dieser Meldung" src="<%= photo %>">
                         </div>
                         <% } %>
 
