--- a/www/templates/sent.html
+++ b/www/templates/sent.html
@@ -1,5 +1,5 @@
         <header class="bar-title">
-            <h1 class="title">Report Sent</h1>
+            <h1 class="title">Meldung wurde gesendet</h1>
         </header>
         <div class="content" role="main">
             <div class="ext-form-content">
