--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,24 +1,24 @@
         <header class="bar-title">
-            <a class="button-prev">Home</a>
-            <h1 class="title">Settings</h1>
+            <a class="button-prev">Start</a>
+            <h1 class="title">Einstellungen</h1>
         </header>
         <div class="content" role="main">
             <ul class="list">
                 <li>
                     <a id="settings">
-                        Settings
+                        Einstellungen
                         <span class="chevron"></span>
                     </a>
                 </li>
                 <li>
                     <a id="help">
-                        Help
+                        Hilfe
                         <span class="chevron"></span>
                     </a>
                 </li>
                 <li>
                     <a id="licence">
-                        Licences
+                        Lizenzen
                         <span class="chevron"></span>
                     </a>
                 </li>
@@ -30,7 +30,7 @@
                 </li>
                 <li>
                     <a id="about">
-                        About this App
+                        Über diese App
                         <span class="chevron"></span>
                     </a>
                 </li>
