--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -1,6 +1,6 @@
             <header class="bar-title">
-                <div class="button-prev">Back</div>
-                <h1 class="title">User details</h1>
+                <div class="button-prev">Zurück</div>
+                <h1 class="title">User Details</h1>
             </header>
                 <div class="content" role="main">
                     <form action="" method="post" name="userForm" id="userForm" enctype="multipart/form-data">
@@ -22,7 +22,7 @@
                                     </div>
 
                                   <div>
-                                      <input type="submit" class="button-blue" id="save" value="Save Details">
+                                      <input type="submit" class="button-blue" id="save" value="Speichern">
                                   </div>
                                 </div>
 
