--- a/www/templates/welcome.html
+++ b/www/templates/welcome.html
@@ -1,12 +1,12 @@
             <header class="bar-title">
-                <h1 class="title">Welcome to</h1>
+                <h1 class="title">Willkommen zu</h1>
             </header>
                 <div class="content" role="main" id="first-page">
                     <div id="welcome">
                         <h1>Z&uuml;ri wie neu</h1>
 
                         <p>
-                            Fill out your details to get started reporting problems
+                            Geben Sie Ihre Kontaktdaten an um Mängel melden zu können
                         </p>
                     </div>
 
@@ -28,7 +28,7 @@
                                     </div>
 
                                   <div>
-                                      <input type="button" class="button-blue" id="save" value="Save Details">
+                                      <input type="button" class="button-blue" id="save" value="Speichern">
                                   </div>
                                 </div>
 
