--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -1,6 +1,6 @@
             <header class="bar-title">
-                <div class="button-prev">Back</div>
-                <h1 class="title">Add Details</h1>
+                <div class="button-prev">Zurück</div>
+                <h1 class="title">Beschreiben Sie den Mangel</h1>
             </header>
                 <div class="content" role="main">
                     <div id="side-form">
@@ -11,7 +11,7 @@
                                     <% if ( report.categories ) { print( report.categories ) } else { %>
                                     <div id="form_category_row">
                                         <label class="inline" for="form_category">Kategorie</label>
-                                        <select name="category" id="form_category" required><option>Loading...</option></select>
+                                        <select name="category" id="form_category" required><option>Lädt...</option></select>
                                     </div>
                                     <% } %>
 
@@ -20,7 +20,7 @@
 
                                     <div>
                                         <label for="user-details" class="select">Persönlichen angaben</label>
-                                        <a id="user-details" name="user-details">Signed in as <% if ( user.name ) { %><%= user.name %><% } else { %><%= user.email %><% } %> <em class="edit_details-info">(click to edit)</em></a>
+                                        <a id="user-details" name="user-details">Eingeloggt als <% if ( user.name ) { %><%= user.name %><% } else { %><%= user.email %><% } %> <em class="edit_details-info">(ändern)</em></a>
                                     </div>
 
                                     <div class="form-txt-submit-box">
