background texture for some pages

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -2,7 +2,7 @@
             <a class="button-prev">[% loc('Home') %]</a>
             <h1 class="title">[% loc('Settings') %]</h1>
         </header>
-        <div class="content" role="main">
+        <div class="content dot-background" role="main">
             <ul class="list">
                 <li>
                     <a id="settings">
