--- a/templates/user.html
+++ b/templates/user.html
@@ -2,7 +2,7 @@
                 <div class="button-prev">[% loc('Back') %]</div>
                 <h1 class="title">[% loc('User details') %]</h1>
             </header>
-                <div class="content" role="main">
+                <div class="content dot-background" role="main">
                     <form action="" method="post" name="userForm" id="userForm" enctype="multipart/form-data">
                     <div id="side-form">
                         <fieldset>
