--- a/www/templates/sent.html
+++ b/www/templates/sent.html
@@ -1,7 +1,7 @@
         <header class="bar-title">
             <h1 class="title">Meldung wurde gesendet</h1>
         </header>
-        <div class="content" role="main">
+        <div class="content dot-background" role="main">
             <div class="ext-form-content">
                 <h3>Fast Fertig! Bitte checken Sie ihre Mailbox...</h3>
 
