--- a/templates/photo.html
+++ b/templates/photo.html
@@ -2,7 +2,7 @@
                 <div class="button-prev">[% loc('Back') %]</div>
                 <h1 class="title">[% loc('Add a Photo') %]</h1>
             </header>
-                <div class="content" role="main">
+                <div class="content dot-background" role="main">
                     <div id="side-form">
                         <fieldset>
                             <div id="problem_form">
