--- a/templates/sent.html
+++ b/templates/sent.html
@@ -1,7 +1,7 @@
         <header class="bar-title">
             <h1 class="title">[% loc('Report Sent') %]</h1>
         </header>
-        <div class="content" role="main">
+        <div class="content dot-background" role="main">
             <div class="ext-form-content">
                 <h3>[% loc('Nearly Done! Now check your email...') %]</h3>
 
