--- a/www/templates/photo.html
+++ b/www/templates/photo.html
@@ -2,7 +2,7 @@
                 <div class="button-prev">Zurück</div>
                 <h1 class="title">Foto</h1>
             </header>
-                <div class="content" role="main">
+                <div class="content dot-background" role="main">
                     <div id="side-form">
                         <fieldset>
                             <div id="problem_form">
