--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -2,7 +2,7 @@
             <a class="button-prev">Start</a>
             <h1 class="title">Einstellungen</h1>
         </header>
-        <div class="content" role="main">
+        <div class="content dot-background" role="main">
             <ul class="list">
                 <li>
                     <a id="settings">
