--- a/www/templates/user.html
+++ b/www/templates/user.html
@@ -2,7 +2,7 @@
                 <div class="button-prev">Zurück</div>
                 <h1 class="title">User Details</h1>
             </header>
-                <div class="content" role="main">
+                <div class="content dot-background" role="main">
                     <form action="" method="post" name="userForm" id="userForm" enctype="multipart/form-data">
                     <div id="side-form">
                         <fieldset>
