--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -8,15 +8,17 @@
                             <div id="problem_form">
                                 <div class="ext-form-content">
 
-                                    <% if ( report.categories ) { print( report.categories ) } else { %>
                                     <div id="form_category_row">
+                                    <% if ( report.categories ) { print( report.categories ) } else { %>
                                         <label class="inline" for="form_category">Kategorie</label>
                                         <select name="category" id="form_category" required><option>Lädt...</option></select>
-                                    </div>
                                     <% } %>
+                                    </div>
 
-                                    <label for="form_detail">Beschreibung</label>
-                                    <textarea name="detail" id="form_detail" placeholder="Beschreiben Sie den Mangel." required><%= report.details %></textarea>
+                                    <div>
+                                        <label for="form_detail">Beschreibung</label>
+                                        <textarea name="detail" id="form_detail" placeholder="Beschreiben Sie den Mangel." required><%= report.details %></textarea>
+                                    </div>
 
                                     <div>
                                         <label for="user-details" class="select">Persönlichen angaben</label>
