--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -247,10 +247,17 @@ input[type=submit].button-blue,
     border: 0px !important;
 }
 
+.bar-title #swap-map {
+    position: absolute;
+    right: 55px;
+    top: 6px;
+    height: 28px;
+}
+
 .bar-title .button-menu {
     position: absolute;
-    right: 0.5em;
-    top: 0.5em;
+    right: 0px;
+    top: 2px;
     border: none;
     box-shadow: none;
     background: none;
@@ -259,7 +266,7 @@ input[type=submit].button-blue,
 
 .bar-title .button-menu img {
     width: 30px;
-    height: 20px;
+    height: 28px;
 }
 
 .button-prev, .button-next {
