--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -28,6 +28,20 @@ textarea {
     font-size: 14px;
 }
 
+.page-title {
+    position: fixed;
+    z-index: 2000;
+    width: 100%;
+    top: 40px;
+    left: 0px;
+    color: white;
+    background-color: #112855;
+    text-align: left;
+    font-weight: normal;
+    font-size: 1.75em;
+    padding: 0.5em 0em 0.5em 1em;
+}
+
 /* stop scrolling on iphone */
 #container {
     width: 100%;
@@ -179,7 +193,7 @@ input[type=submit].button-blue,
     width: 95%;
     position: absolute;
     left: 0px;
-    top: 15px;
+    top: 45px;
     z-index: 2000;
     background-color: rgb(201,201,201);
     padding: 0.2em;
