--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -4,6 +4,9 @@
                 <a class="button-menu"><img src="img/menu.png"></a>
             </header>
                 <div class="content" role="main">
+                    <h1 class="page-title">
+                        Züri wie neu
+                    </h1>
                     <form action="" method="post" name="mapForm" id="mapForm" enctype="multipart/form-data" class="validate">
 
                     <script type="text/javascript">
