update templates with latest translations

--- a/www/templates/photo.html
+++ b/www/templates/photo.html
@@ -8,11 +8,11 @@
                             <div id="problem_form">
                                 <div class="ext-form-content">
                                   <div>
-                                      <a class="button-blue" id="take-photo">Take Photo</a>
+                                      <a class="button-blue" id="take-photo">Neues Foto machen</a>
                                       <a class="nodisplay button-grey" id="del-photo">Foto löschen</a>
                                   </div>
                                   <div>
-                                      <a class="button-blue" id="add-photo">Add Existing Photo</a>
+                                      <a class="button-blue" id="add-photo">Foto hochladen</a>
                                   </div>
                                   <div class="center">
                                   <img class="ext-photo-preview" src="img/placeholder-photo.png" alt="" id="report-photo">
