--- a/www/templates/sent.html
+++ b/www/templates/sent.html
@@ -6,7 +6,7 @@
                 <h3>Fast Fertig! Bitte checken Sie ihre Mailbox...</h3>
 
                 <p>
-                Falls Sie kein E-Mail erhalten, &uuml;berpr&uuml;fend Sie bitte Ihren Spam-Ordner.
+                Falls Sie kein E-Mail erhalten, überprüfen Sie bitte Ihren Spam-Ordner.
                 </p>
                 <div>
                   <a class="button-blue" href="index.html" id="button-done">Erledigt</a>
