--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -18,7 +18,7 @@
                 </li>
                 <li>
                     <a id="privacy">
-                        Privacy Policy
+                        Disclaimer
                         <span class="chevron"></span>
                     </a>
                 </li>
