--- a/www/templates/welcome.html
+++ b/www/templates/welcome.html
@@ -6,7 +6,7 @@
                         <h1>Z&uuml;ri wie neu</h1>
 
                         <p>
-                            Geben Sie Ihre Kontaktdaten an um Mängel melden zu können
+                            Geben Sie Ihre Kontaktdaten an um Mängel melden zu können.
                         </p>
                     </div>
 
