--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -1,6 +1,6 @@
             <header class="bar-title">
                 <div class="button-prev">Zurück</div>
-                <h1 class="title">Beschreiben Sie den Mangel</h1>
+                <h1 class="title">Details</h1>
             </header>
                 <div class="content dot-background" role="main">
                     <div id="side-form">
