--- a/www/templates/privacy.html
+++ b/www/templates/privacy.html
@@ -1,6 +1,6 @@
         <header class="bar-title">
             <a class="button-prev">Zurück</a>
-            <h1 class="title">Privacy Policy</h1>
+            <h1 class="title">Disclaimer</h1>
         </header>
         <div class="content" role="main">
         </div>
