--- a/www/templates/report.html
+++ b/www/templates/report.html
@@ -39,7 +39,7 @@
                     </div>
 
                     <div class="problem-header cf">
-                        <h1><%= title %></h1>
+                        <h1><%= title %><br>Reported in the <%= category %> category</h1>
                         <p class="sub">
                             <%= created_pp %>
                         </p>
