add title to report page

--- a/templates/report.html
+++ b/templates/report.html
@@ -1,6 +1,6 @@
             <header class="bar-title">
                 <div class="button-prev">[% loc('Back') %]</div>
-                <h1 class="title"></h1>
+                <h1 class="title">[% loc('Details') %]</h1>
             </header>
             <div class="content" role="main">
                     <div id="map_box" style="height: 10em; ">
