--- a/www/templates/report.html
+++ b/www/templates/report.html
@@ -1,6 +1,6 @@
             <header class="bar-title">
                 <div class="button-prev">Zurück</div>
-                <h1 class="title"></h1>
+                <h1 class="title">Beschreibung</h1>
             </header>
             <div class="content" role="main">
                     <div id="map_box" style="height: 10em; ">
