--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -499,9 +499,8 @@ ul.list  {
 }
 
 .button-no-gradient {
-    border: none !important;
+    text-decoration: none !important;
     background-image: none !important;
-    box-shadow: none !important;
     z-index: 1;
 }
 
@@ -509,19 +508,28 @@ ul.list  {
 .button-no-gradient:before {
     background-image: none !important;
     background-color: #315db7;
-    border-left: none !important;
-    border-radius: 10px 70px 2px 63px / 2px 63px 10px 70px !important;
     box-shadow: none !important;
     z-index: -1;
 }
 
+.button-no-gradient:active {
+    box-shadow: none !important;
+    padding-top: 5px;
+    padding-bottom: 3px;
+}
+.bar-title .button-prev:active:before{
+    border-left: none !important;
+}
+
 .bar-title [class*=button]:active,
-.bar-title .button-next:after:active,
-.bar-title .button-prev:before:active {
+.bar-title .button-prev:active,
+.bar-title .button-next:active:after,
+.bar-title .button-prev:active:before {
+    background-image: none !important;
     background-color: #315db7;
 }
 
-.bar-title .button-prev:active:before,
+/*.bar-title .button-prev:active:before,*/
 .bar-title .button-prev:before {
     background-image: -webkit-gradient(linear, left bottom, right top, from(#204DA5), to(#416CC7));
 }
