--- a/templates/around.html
+++ b/templates/around.html
@@ -36,6 +36,7 @@
                             <!-- a id="saved-reports" class="nodisplay button-grey">View Drafts</a -->
                             <a id="use-location" class="nodisplay button-blue">[% loc('Use this Location') %]</a>
                             <a id="select-another" class="nodisplay button-grey">[% loc('Select another') %]</a>
+                            <a id="relocate" class="nodisplay button-grey"><img src="img/location.png"></a>
                     </div>
                     </form>
                 </div>
