--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -197,6 +197,18 @@ input[type=submit].button-blue,
     top: 300px;
 }
 
+#relocate {
+    position: absolute;
+    left: 0.5em;
+    bottom: 100px;
+    height: 16px;
+    width: 16px;
+    padding: 2px 5px 6px 4px;
+    margin: 0px;
+    border-radius: 2px;
+    background-color: rgb(248,248,248);
+}
+
 #search {
     text-align: center;
     width: 95%;
