--- a/www/templates/report.html
+++ b/www/templates/report.html
@@ -54,7 +54,7 @@
                     </div>
 
                     <% if (update_time ) { %>
-                        <h4 class="static-with-rule">Updates</h4>
+                        <h4 class="static-with-rule">Antwort</h4>
                         <ul class="issue-list">
                             <li>
                                 <div class="update-wrap">
