--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -9,7 +9,7 @@
                                 <div class="ext-form-content">
 
                                     <div id="form_category_row">
-                                    <% if ( report.categories ) { print( report.categories ) } else { %>
+                                    <% if ( report.categories != '' ) { print( report.categories ); } else { %>
                                         <label class="inline" for="form_category">Kategorie</label>
                                         <select name="category" id="form_category" required><option>Lädt...</option></select>
                                     <% } %>
