move report button a little further up the screen and center it properly

--- a/templates/around.html
+++ b/templates/around.html
@@ -30,7 +30,9 @@
                             <div id="search">
                                 <input name="pc" id="pc" autocorrect="off" autocomplete="off" placeholder="[% loc('Enter a Z&uuml;rich street name') %]"><input type="button" value="" id="btn-search">
                             </div>
-                            <a id="mark-here" class="nodisplay button-blue">[% loc('Create Report') %]</a>
+                            <div id="mark-here" class="nodisplay">
+                            <a class="button-blue">[% loc('Create Report') %]</a>
+                            </div>
                             <!-- a id="saved-reports" class="nodisplay button-grey">View Drafts</a -->
                             <a id="use-location" class="nodisplay button-blue">[% loc('Use this Location') %]</a>
                             <a id="select-another" class="nodisplay button-grey">[% loc('Select another') %]</a>
