--- a/www/templates/around.html
+++ b/www/templates/around.html
@@ -30,7 +30,9 @@
                             <div id="search">
                                 <input name="pc" id="pc" autocorrect="off" autocomplete="off" placeholder="Ungefähre Adresse des Mangels"><input type="button" value="" id="btn-search">
                             </div>
-                            <a id="mark-here" class="nodisplay button-blue">Eine Meldung erfassen</a>
+                            <div id="mark-here" class="nodisplay">
+                            <a class="button-blue">Eine Meldung erfassen</a>
+                            </div>
                             <!-- a id="saved-reports" class="nodisplay button-grey">View Drafts</a -->
                             <a id="use-location" class="nodisplay button-blue">Hier erfassen</a>
                             <a id="select-another" class="nodisplay button-grey">Anderer Ort</a>
