--- a/www/css/mobile.css
+++ b/www/css/mobile.css
@@ -193,17 +193,20 @@ input[type=submit].button-blue,
 
 #mark-here, #use-location {
     position: absolute;
+    width: 100%;
+    text-align: center;
     left: 0px;
-    bottom: 20px;
+    bottom: 30px;
+    z-index: 2000;
 }
 
 #relocate {
     position: absolute;
-    left: 0.5em;
-    bottom: 65px;
     height: 16px;
     width: 16px;
     padding: 2px 5px 6px 4px;
+    left: 4%;
+    bottom: 75px;
     margin: 0px;
     border-radius: 2px;
     background-color: rgb(248,248,248);
